<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="18dp"
    android:elevation="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/text_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/activity_icon"
                android:layout_width="36dp"
                android:layout_height="27dp"
                android:layout_marginRight="@dimen/text_margin"
                android:src="@drawable/footwear_cad"/>

            <TextView
                android:id="@+id/activity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@string/bold"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="Activities"
                android:textColor="@color/textColor"
                android:textSize="@dimen/title_size" />

        </LinearLayout>

        <TextView
            android:id="@+id/activity_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_department"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@string/light"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>