<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="225dp"
            android:layout_height="225dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_margin"
            app:cardCornerRadius="27sp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:scaleType="fitXY"
                android:src="@drawable/head"
                android:id="@+id/college_image"/>

        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MESSAGE FROM HEAD"
            android:layout_marginTop="21dp"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@string/bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@string/light"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Green Environment"
                android:layout_marginLeft="@dimen/text_margin"
                android:textColor="@color/textColor"
                android:fontFamily="@string/bold"
                android:textSize="@dimen/text_size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="High Research Facilities"
                android:layout_marginLeft="@dimen/text_margin"
                android:textColor="@color/textColor"
                android:fontFamily="@string/bold"
                android:textSize="@dimen/text_size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quality Education"
                android:layout_marginLeft="@dimen/text_margin"
                android:textColor="@color/textColor"
                android:fontFamily="@string/bold"
                android:textSize="@dimen/text_size"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Activities"
            android:layout_marginTop="21dp"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@string/bold"/>

        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/text_margin"
            android:foregroundGravity="center"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:id="@+id/viewPager"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>